etapa2/parser.output
Terminals unused in grammar

   TK_PR_IF
   TK_PR_THEN
   TK_PR_ELSE
   TK_PR_WHILE
   TK_PR_DO
   TK_PR_INPUT
   TK_PR_OUTPUT
   TK_PR_RETURN
   TK_PR_CONST
   TK_PR_FOR
   TK_PR_SWITCH
   TK_PR_CASE
   TK_PR_BREAK
   TK_PR_CONTINUE
   TK_PR_CLASS
   TK_PR_PRIVATE
   TK_PR_PUBLIC
   TK_PR_PROTECTED
   TK_PR_END
   TK_PR_DEFAULT
   TK_OC_LE
   TK_OC_GE
   TK_OC_EQ
   TK_OC_NE
   TK_OC_AND
   TK_OC_OR
   TK_OC_SL
   TK_OC_SR
   TK_LIT_FLOAT
   TK_LIT_FALSE
   TK_LIT_TRUE
   TK_LIT_CHAR
   TK_LIT_STRING
   TOKEN_ERRO


Grammar

    0 $accept: programa $end

    1 programa: programa decla
    2         | programa func
    3         | func
    4         | decla

    5 decla: tipo lista_var ';'
    6      | TK_PR_STATIC tipo lista_var ';'

    7 tipo: TK_PR_INT
    8     | TK_PR_FLOAT
    9     | TK_PR_CHAR
   10     | TK_PR_BOOL
   11     | TK_PR_STRING

   12 lista_var: lista_var ',' var
   13          | var

   14 var: TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   15    | TK_IDENTIFICADOR

   16 func: TK_PR_FOREACH


Terminals, with rules where they appear

$end (0) 0
',' (44) 12
';' (59) 5 6
'[' (91) 14
']' (93) 14
error (256)
TK_PR_INT (258) 7
TK_PR_FLOAT (259) 8
TK_PR_BOOL (260) 10
TK_PR_CHAR (261) 9
TK_PR_STRING (262) 11
TK_PR_IF (263)
TK_PR_THEN (264)
TK_PR_ELSE (265)
TK_PR_WHILE (266)
TK_PR_DO (267)
TK_PR_INPUT (268)
TK_PR_OUTPUT (269)
TK_PR_RETURN (270)
TK_PR_CONST (271)
TK_PR_STATIC (272) 6
TK_PR_FOREACH (273) 16
TK_PR_FOR (274)
TK_PR_SWITCH (275)
TK_PR_CASE (276)
TK_PR_BREAK (277)
TK_PR_CONTINUE (278)
TK_PR_CLASS (279)
TK_PR_PRIVATE (280)
TK_PR_PUBLIC (281)
TK_PR_PROTECTED (282)
TK_PR_END (283)
TK_PR_DEFAULT (284)
TK_OC_LE (285)
TK_OC_GE (286)
TK_OC_EQ (287)
TK_OC_NE (288)
TK_OC_AND (289)
TK_OC_OR (290)
TK_OC_SL (291)
TK_OC_SR (292)
TK_LIT_INT (293) 14
TK_LIT_FLOAT (294)
TK_LIT_FALSE (295)
TK_LIT_TRUE (296)
TK_LIT_CHAR (297)
TK_LIT_STRING (298)
TK_IDENTIFICADOR (299) 14 15
TOKEN_ERRO (300)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
programa (51)
    on left: 1 2 3 4, on right: 0 1 2
decla (52)
    on left: 5 6, on right: 1 4
tipo (53)
    on left: 7 8 9 10 11, on right: 5 6
lista_var (54)
    on left: 12 13, on right: 5 6 12
var (55)
    on left: 14 15, on right: 12 13
func (56)
    on left: 16, on right: 2 3


State 0

    0 $accept: . programa $end
    1 programa: . programa decla
    2         | . programa func
    3         | . func
    4         | . decla
    5 decla: . tipo lista_var ';'
    6      | . TK_PR_STATIC tipo lista_var ';'
    7 tipo: . TK_PR_INT
    8     | . TK_PR_FLOAT
    9     | . TK_PR_CHAR
   10     | . TK_PR_BOOL
   11     | . TK_PR_STRING
   16 func: . TK_PR_FOREACH

    TK_PR_INT      shift, and go to state 1
    TK_PR_FLOAT    shift, and go to state 2
    TK_PR_BOOL     shift, and go to state 3
    TK_PR_CHAR     shift, and go to state 4
    TK_PR_STRING   shift, and go to state 5
    TK_PR_STATIC   shift, and go to state 6
    TK_PR_FOREACH  shift, and go to state 7

    programa  go to state 8
    decla     go to state 9
    tipo      go to state 10
    func      go to state 11


State 1

    7 tipo: TK_PR_INT .

    $default  reduce using rule 7 (tipo)


State 2

    8 tipo: TK_PR_FLOAT .

    $default  reduce using rule 8 (tipo)


State 3

   10 tipo: TK_PR_BOOL .

    $default  reduce using rule 10 (tipo)


State 4

    9 tipo: TK_PR_CHAR .

    $default  reduce using rule 9 (tipo)


State 5

   11 tipo: TK_PR_STRING .

    $default  reduce using rule 11 (tipo)


State 6

    6 decla: TK_PR_STATIC . tipo lista_var ';'
    7 tipo: . TK_PR_INT
    8     | . TK_PR_FLOAT
    9     | . TK_PR_CHAR
   10     | . TK_PR_BOOL
   11     | . TK_PR_STRING

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    tipo  go to state 12


State 7

   16 func: TK_PR_FOREACH .

    $default  reduce using rule 16 (func)


State 8

    0 $accept: programa . $end
    1 programa: programa . decla
    2         | programa . func
    5 decla: . tipo lista_var ';'
    6      | . TK_PR_STATIC tipo lista_var ';'
    7 tipo: . TK_PR_INT
    8     | . TK_PR_FLOAT
    9     | . TK_PR_CHAR
   10     | . TK_PR_BOOL
   11     | . TK_PR_STRING
   16 func: . TK_PR_FOREACH

    $end           shift, and go to state 13
    TK_PR_INT      shift, and go to state 1
    TK_PR_FLOAT    shift, and go to state 2
    TK_PR_BOOL     shift, and go to state 3
    TK_PR_CHAR     shift, and go to state 4
    TK_PR_STRING   shift, and go to state 5
    TK_PR_STATIC   shift, and go to state 6
    TK_PR_FOREACH  shift, and go to state 7

    decla  go to state 14
    tipo   go to state 10
    func   go to state 15


State 9

    4 programa: decla .

    $default  reduce using rule 4 (programa)


State 10

    5 decla: tipo . lista_var ';'
   12 lista_var: . lista_var ',' var
   13          | . var
   14 var: . TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   15    | . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 16

    lista_var  go to state 17
    var        go to state 18


State 11

    3 programa: func .

    $default  reduce using rule 3 (programa)


State 12

    6 decla: TK_PR_STATIC tipo . lista_var ';'
   12 lista_var: . lista_var ',' var
   13          | . var
   14 var: . TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   15    | . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 16

    lista_var  go to state 19
    var        go to state 18


State 13

    0 $accept: programa $end .

    $default  accept


State 14

    1 programa: programa decla .

    $default  reduce using rule 1 (programa)


State 15

    2 programa: programa func .

    $default  reduce using rule 2 (programa)


State 16

   14 var: TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   15    | TK_IDENTIFICADOR .  [';', ',']

    '['  shift, and go to state 20

    $default  reduce using rule 15 (var)


State 17

    5 decla: tipo lista_var . ';'
   12 lista_var: lista_var . ',' var

    ';'  shift, and go to state 21
    ','  shift, and go to state 22


State 18

   13 lista_var: var .

    $default  reduce using rule 13 (lista_var)


State 19

    6 decla: TK_PR_STATIC tipo lista_var . ';'
   12 lista_var: lista_var . ',' var

    ';'  shift, and go to state 23
    ','  shift, and go to state 22


State 20

   14 var: TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 24


State 21

    5 decla: tipo lista_var ';' .

    $default  reduce using rule 5 (decla)


State 22

   12 lista_var: lista_var ',' . var
   14 var: . TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   15    | . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 16

    var  go to state 25


State 23

    6 decla: TK_PR_STATIC tipo lista_var ';' .

    $default  reduce using rule 6 (decla)


State 24

   14 var: TK_IDENTIFICADOR '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 26


State 25

   12 lista_var: lista_var ',' var .

    $default  reduce using rule 12 (lista_var)


State 26

   14 var: TK_IDENTIFICADOR '[' TK_LIT_INT ']' .

    $default  reduce using rule 14 (var)
